[package]
name = "kagari"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.5.0"
itertools = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.11"
ffprobe = "0.3.3"
path-slash = "0.2.1"
rfd = "0.10.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
whoami = "1.3.0"
